actor: Invalidate the current state when popping easing states

https://bugzilla.gnome.org/show_bug.cgi?id=672945